--- a/manifest.json
+++ b/manifest.json
@@ -17,15 +17,15 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     },
-    "default_title": "Trakt-Scrobbler",      // optional; shown in tooltip
-    "default_popup": "popup.html"        // optional
+    "default_title": "Trakt-Scrobbler",
+    "default_popup": "popup.html"
   },
   "permissions": [
     "tabs",
     "notifications",
     "storage",
-    "http://www.crunchyroll.com/*",
-    "https://www.crunchyroll.com/*"
+    "*://*.crunchyroll.com/*",
+    "*://*.trakt.tv/*"
   ],
   "content_scripts": [
     {
@@ -33,5 +33,6 @@
       "js": ["inject.js"],
       "run_at": "document_end"
     }
-  ]
+  ],
+  "web_accessible_resources": ["successAuth.html"]
 }
