--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "prettier/prettier": [
       "error",
       {
-        "semi": false
+        "semi": false,
+        "printWidth": 130
       }
     ]
   },
