--- a/package.json
+++ b/package.json
@@ -6,26 +6,23 @@
   "license": "MIT",
   "scripts": {
     "start": "yarn build -- --w",
-    "build": "webpack --env.env=dev",
-    "build-prod": "webpack --env.env=prod"
+    "build": "yarn webpack -- --env.env=dev",
+    "build-prod": "yarn webpack -- --env.env=prod",
+    "webpack": "webpack --progress"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "@types/chrome": "^0.0.47",
+    "@types/node": "^8.0.13",
+    "@types/webpack": "^3.0.4",
+    "awesome-typescript-loader": "^3.2.1",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
-    "eslint": "^4.2.0",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-prettier": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
-    "prettier": "^1.5.2",
-    "webpack": "^3.2.0"
+    "prettier": "^1.5.3",
+    "source-map-loader": "^0.2.1",
+    "ts-node": "^3.2.0",
+    "typescript": "^2.4.1",
+    "webpack": "^3.3.0"
   },
   "dependencies": {
     "moment": "^2.18.1",
