--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "yarn build -- --w",
     "build": "yarn webpack -- --env.env=dev",
     "build-prod": "yarn webpack -- --env.env=prod",
+    "lint": "yarn lint-tslint && yarn lint-prettier",
+    "lint-tslint": "tslint 'src/**/*.ts' '*.ts' 'typings/**/*.ts'",
+    "lint-prettier": "prettier --debug-check -l --no-semi --print-width 120 --parser typescript \"**/*.ts\"",
     "webpack": "webpack --progress"
   },
   "devDependencies": {
@@ -21,6 +24,7 @@
     "prettier": "^1.5.3",
     "source-map-loader": "^0.2.1",
     "ts-node": "^3.2.0",
+    "tslint": "^5.5.0",
     "typescript": "^2.4.1",
     "webpack": "^3.3.0"
   },
